# Perception-Aware-Control-for-Autonomous-Navigation

./: .gitignore  Dockerfile  README.md  calculate_avg_inference.py  docker-compose.yaml  object_detector_model.pth  pyproject.toml  requirements.txt
clf/: car_classes.txt  clf.py  inference.py
control/: control.py  control2.py  hybrid_control.py  hybrid_control_multobstacles.py
data/: data_load.py
detect/: object_detect_cli.py  object_detector.py  object_detector_model.pth
intensity/: 1.xlsx  10.xlsx  2.xlsx  3.xlsx  4.xlsx  5.xlsx  6.xlsx  7.xlsx  8.xlsx  9.xlsx
models/: linear_model.py
saved_models/: read_model.py
saved_models/cnn_100kTrain/: saved_model.pb
saved_models/cnn_100kTrain/variables/: variables.data-00000-of-00002  variables.data-00001-of-00002  variables.index
saved_models/cnn_100kTrain_100__OcclusionRate/: saved_model.pb
saved_models/cnn_100kTrain_100__OcclusionRate/variables/: variables.data-00000-of-00002  variables.data-00001-of-00002  variables.index
saved_models/cnn_200kTrain_MultipleObstacles/: saved_model.pb
saved_models/cnn_200kTrain_MultipleObstacles/variables/: variables.data-00000-of-00002  variables.data-00001-of-00002  variables.index
utils/: generate_data.py  simple_environment copy.py  simple_environment.py
