[project]
name = "obstacle-avoidance-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "array2gif==1.0.4",
    "matplotlib>=3.10.3",
    "moviepy>=2.1.2",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "torch==2.5",
    "torchvision<=2.7",
    # "ultralytics>=8.3.131",
    "ultralytics",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118" },
]
torchvision = [
  { index = "pytorch-cu118"},
]
ultralytics = { path = "ultralytics" }
# ultralytics = { path = "ultralytics" }
